Bug 1859786 - Fix lock annotation warning in Mozilla-specific edit on top of video_capture_impl.cc. r=webrtc-reviewers,mjf

The annotations were added in M116:
https://hg.mozilla.org/mozilla-central/rev/9cd372df013948ad822ae936752d725d77474fb5

Note that this was never unsafe, since _dataCallbacks is only written on the
same thread that we are patching here. This patch however, adds helpful static
analysis.

Differential Revision: https://phabricator.services.mozilla.com/D191301